# inferox

./: .gitignore  CHANGELOG.md  COVERAGE.md  Cargo.toml  Makefile  PUBLISHING.md  README.md  RELEASE.md  RELEASE_QUICK.md  SPECIFICATION.md  cliff.toml  release.toml  tarpaulin.toml
.github/workflows/: coverage.yml  examples.yml  pr-checks.yml  release.yml
crates/hf-xet-rs/: Cargo.toml
crates/hf-xet-rs/src/: cache.rs  client.rs  config.rs  error.rs  hf_api.rs  lib.rs  types.rs  xet.rs
crates/hf-xet-rs/tests/: integration_tests.rs  unit_tests.rs
crates/inferox-candle/: Cargo.toml
crates/inferox-candle/src/: backend.rs  device.rs  lib.rs  model_builder.rs  tensor.rs  tensor_builder.rs  var_map.rs
crates/inferox-core/: Cargo.toml
crates/inferox-core/src/: backend.rs  device.rs  dtype.rs  error.rs  lib.rs  model.rs  tensor.rs
crates/inferox-engine/: Cargo.toml
crates/inferox-engine/src/: engine.rs  lib.rs  session.rs
crates/inferox-mlpkg/: Cargo.toml
crates/inferox-mlpkg/src/: lib.rs
crates/inferox-mlpkg/tests/: bert_e2e.rs  unit_tests.rs
crates/inferox-tch/: Cargo.toml  README.md
crates/inferox-tch/src/: backend.rs  device.rs  lib.rs  tensor.rs  tensor_builder.rs  torchscript.rs
examples/bert-candle/: Cargo.toml  README.md  build.rs  model.toml
examples/bert-candle/src/: lib.rs
examples/bert-candle/tests/: e2e_test.rs
examples/bert-multi-backend/: Cargo.toml
examples/bert-multi-backend/src/: lib.rs  request.rs  response.rs  router.rs
examples/bert-multi-backend/tests/: e2e_test.rs  simple_test.rs
examples/bert-tch/: Cargo.toml  PYTORCH_VERSION.md  README.md  build.rs  model.toml
examples/bert-tch/mlpkg/: metadata.json  model_info.json
examples/bert-tch/src/: lib.rs
examples/bert-tch/tests/: e2e_test.rs
examples/doclayout-yolo/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  INFERENCE_ANALYSIS.md  MODEL_INFO.md  README.md
examples/doclayout-yolo/models/: check_model_classes.py  download_latest_model.py  export_torchscript.py
examples/doclayout-yolo/samples/: README.md  prepare_samples.py
examples/doclayout-yolo/src/: lib.rs
examples/doclayout-yolo/tests/: debug_inference.rs  e2e_test.rs  visual_e2e_test.rs
examples/mlp/: Cargo.toml  README.md
examples/mlp/models/classifier/: Cargo.toml
examples/mlp/models/classifier/src/: lib.rs
examples/mlp/models/small/: Cargo.toml
examples/mlp/models/small/src/: lib.rs
examples/mlp/src/: lib.rs  main.rs
examples/mlp/tests/: e2e_test.rs
rfcs/: 0000-template.md  0001-mlpkg-multi-backend.md  0002-tch-backend.md  README.md  RFC-0001-DEVICE-MANAGEMENT.md  RFC-0002-TORCHSCRIPT-SUPPORT.md
scripts/: README.md  analyze-coverage.sh  install-git-hooks.sh  prepare-release.sh  publish.sh
