[workspace]
resolver = "2"
members = [
    "crates/inferox-core",
    "crates/inferox-candle",
    "crates/inferox-engine",
    "crates/inferox-mlpkg",
    "examples/mlp",
    "examples/mlp/models/classifier",
    "examples/mlp/models/small",
]


[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["Inferox Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/inferox"

[workspace.dependencies]
thiserror = "1.0"
candle-core = { git = "https://github.com/huggingface/candle", branch = "main" }
candle-nn = { git = "https://github.com/huggingface/candle", branch = "main" }


