[package]
name = "inferox-candle"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
inferox-core = { path = "../inferox-core" }
candle-core.workspace = true
candle-nn.workspace = true
thiserror.workspace = true

[dev-dependencies]
