[package]
name = "inferox-candle"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Candle backend implementation for Inferox"

[dependencies]
inferox-core = { version = "0.1.0", path = "../inferox-core" }
candle-core.workspace = true
candle-nn.workspace = true
thiserror.workspace = true

[dev-dependencies]
