[package]
name = "inferox-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core traits and types for Inferox ML inference library"

[dependencies]
thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
