[package]
name = "inferox-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Inference engine for Inferox"

[dependencies]
inferox-core = { version = "0.1.0", path = "../inferox-core" }
inferox-candle = { version = "0.1.0", path = "../inferox-candle" }
inferox-tch = { version = "0.1.0", path = "../inferox-tch", optional = true }
candle-core.workspace = true
tch = { workspace = true, optional = true }
thiserror.workspace = true

[features]
default = []
tch = ["inferox-tch", "dep:tch"]

[dev-dependencies]
inferox-candle = { version = "0.1.0", path = "../inferox-candle" }
