[package]
name = "inferox-mlpkg"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Model package format for Inferox"

[dependencies]
thiserror.workspace = true
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
hf-xet-rs = { path = "../hf-xet-rs" }

[dev-dependencies]
tempfile = "3.8"
