[package]
name = "inferox-mlpkg"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Model package format for Inferox"

[dependencies]
thiserror.workspace = true
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
hf-xet-rs = { path = "../hf-xet-rs" }
libloading = "0.8"
inferox-core = { path = "../inferox-core" }
inferox-candle = { path = "../inferox-candle" }
inferox-tch = { path = "../inferox-tch", optional = true }

[features]
tch = ["inferox-tch"]

[dev-dependencies]
tempfile = "3.8"
candle-core.workspace = true
