[package]
name = "inferox-tch"
version = "0.1.1"
edition = "2021"
authors = ["Inferox Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/inferox"
description = "PyTorch (tch-rs) backend implementation for Inferox"

[dependencies]
inferox-core = { version = "0.1.0", path = "../inferox-core" }
tch = "0.17"
thiserror = "1.0"

[dev-dependencies]
