[package]
name = "bert-multi-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
inferox-core = { path = "../../crates/inferox-core" }
inferox-engine = { path = "../../crates/inferox-engine" }
inferox-candle = { path = "../../crates/inferox-candle" }
inferox-tch = { path = "../../crates/inferox-tch", optional = true }
inferox-mlpkg = { path = "../../crates/inferox-mlpkg" }
candle-core = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.0"
futures = "0.3"

[features]
default = ["tch"]
tch = ["inferox-tch", "inferox-mlpkg/tch"]

[lib]
name = "bert_multi_backend"
path = "src/lib.rs"
