[package]
name = "bert-tch"
version = "0.1.1"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
inferox-core = { path = "../../crates/inferox-core" }
inferox-tch = { path = "../../crates/inferox-tch" }
tch = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
safetensors = "0.4"

[dev-dependencies]
inferox-mlpkg = { path = "../../crates/inferox-mlpkg", features = ["tch"] }
inferox-engine = { path = "../../crates/inferox-engine" }
tokio = { version = "1.35", features = ["full"] }

[build-dependencies]
inferox-mlpkg = { path = "../../crates/inferox-mlpkg" }
tokio = { version = "1.35", features = ["full", "rt-multi-thread"] }
