[package]
name = "doclayout-yolo"
version = "0.1.0"
edition = "2021"

[dependencies]
inferox-core = { path = "../../crates/inferox-core" }
inferox-tch = { path = "../../crates/inferox-tch" }
inferox-engine = { path = "../../crates/inferox-engine" }
tch = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"

[lib]
name = "doclayout_yolo"
path = "src/lib.rs"
