[package]
name = "mlp"
version = "0.1.1"
edition = "2021"
publish = false

[lib]
name = "mlp"
crate-type = ["rlib"]

[[bin]]
name = "mlp"
path = "src/main.rs"

[dependencies]
inferox-core = { path = "../../crates/inferox-core" }
inferox-candle = { path = "../../crates/inferox-candle" }
inferox-engine = { path = "../../crates/inferox-engine" }
candle-core.workspace = true
candle-nn.workspace = true
libloading = "0.8"
