[package]
name = "mlp-small"
version = "0.1.1"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
mlp = { path = "../.." }
inferox-core = { path = "../../../../crates/inferox-core" }
inferox-candle = { path = "../../../../crates/inferox-candle" }
candle-core.workspace = true
